# obs-studio

./: .gitmodules
UI/: obs-app.cpp  window-basic-settings.cpp
UI/forms/: OBSBasicSettings.ui
UI/frontend-plugins/decklink-output-ui/: decklink-ui-main.cpp
libobs/: CMakeLists.txt  obs-internal.h  obs-scene.c  obs-source-deinterlace.c  obs-source.c  obs-video.c  obs.c
libobs-d3d11/: d3d11-duplicator.cpp  d3d11-rebuild.cpp  d3d11-stagesurf.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture2d.cpp
libobs-opengl/: CMakeLists.txt  gl-cocoa.m  gl-shader.c  gl-shaderconverter.cpp  gl-shaderparser.c  gl-subsystem.h  gl-windows.c
libobs-winrt/: winrt-capture.cpp
libobs/data/: area.effect  bicubic_scale.effect  bilinear_lowres_scale.effect  default.effect  deinterlace_base.effect  deinterlace_blend.effect  deinterlace_blend_2x.effect  deinterlace_discard.effect  deinterlace_discard_2x.effect  deinterlace_linear.effect  deinterlace_linear_2x.effect  deinterlace_yadif.effect  deinterlace_yadif_2x.effect  format_conversion.effect  lanczos_scale.effect  opaque.effect
libobs/graphics/: dds-file.cpp  dds-file.h  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h  image-file.c  image-file.h
libobs/media-io/: video-io.h
libobs/util/: platform-windows.c
libobs/util/windows/: ComPtr.hpp
plugins/: CMakeLists.txt
plugins/decklink/: decklink-device-instance.cpp  decklink-output.cpp
plugins/image-source/: color-source.c
plugins/obs-ffmpeg/: jim-nvenc-helpers.c  jim-nvenc.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-vaapi.c  obs-ffmpeg.c
plugins/obs-filters/: crop-filter.c  gpu-delay.c  nvidia-greenscreen-filter.c  scale-filter.c  scroll-filter.c
plugins/obs-transitions/: transition-stinger.c
plugins/picoscope-source/: CMakeLists.txt  picoscope-source.c
plugins/win-capture/: CMakeLists.txt  dc-capture.c  duplicator-monitor-capture.c  game-capture.c  graphics-hook-info.h  plugin-main.c  safe-d3d-capture.c
plugins/win-capture/data/locale/: en-US.ini
plugins/win-capture/graphics-hook/: CMakeLists.txt  d3d10-capture.cpp  d3d11-capture.cpp  d3d9-capture.cpp  gl-capture.c  graphics-hook.c  graphics-hook.h  vulkan-capture.c
plugins/win-dshow/: ffmpeg-decode.c  win-dshow.cpp
plugins/win-wasapi/: win-wasapi.cpp
